fix spacing error

--- a/src/styles/components/_album-artwork.scss
+++ b/src/styles/components/_album-artwork.scss
@@ -2,6 +2,7 @@
   position: relative;
   height: 100vw;
   width: 100%;
+  max-height: 40rem;
 
   display: flex;
   align-items: center;
